some very basic form helper styles to avoid input layout breaking on various default forms

--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,28 @@ html {
 .usa-tab a.active {
   background-color: #0071bc;
 }
+
+@media screen and (min-width: 600px) {
+  form {
+    max-width: initial;
+  }
+}
+
+input,
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="url"],
+input[type="tel"],
+input[type="number"],
+input[type="search"],
+input[type="file"],
+input[type="date"],
+input[type="datetime-local"],
+input[type="month"],
+input[type="time"],
+input[type="week"],
+textarea,
+select {
+  max-width: initial;
+}
